feat: añadir JSON de elementos (solo primera columna), sincronizar UltimateSpecs scrapper con repo original
Seguramente, en el snippet de las líneas 155-181 haya que cambiar los selectFirst por select
en los que están dentro del bucle del for loop

refactor: carpeta 'Scrips' a 'Scripts', especificar qué hacía (scraping a RockAuto)
refactor: eliminar dependencia Jackson
refactor: eliminar archivos inútiles Java