@@ -5,6 +5,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
+import org.jsoup.nodes.Node;
+import org.jsoup.nodes.TextNode;
 import org.jsoup.select.Elements;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -12,18 +14,16 @@ import org.springframework.transaction.annotation.Transactional;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import javax.imageio.ImageIO;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-
-import es.ual.dra.autodiagnostico.repository.VehicleRepository;
 
 /**
  * Servicio encargado de realizar el scraping de datos de vehículos
@@ -35,14 +35,14 @@ public class UltimateSpecsVehicleScraperService {
 
         @Transactional
         public void scrapeAndSave() throws IOException {
-
                 final String url = "https://www.ultimatespecs.com/es";
 
                 System.out.println(">>> SCRAPER STARTED <<<");
                 log.info("Iniciando scraping de la URL: {}", url);
 
                 Document doc = Jsoup.connect(url)
-                                .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36")
+                                .userAgent(
+                                                "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36")
                                 .timeout(10000)
                                 .get();
 
@@ -53,71 +53,81 @@ public class UltimateSpecsVehicleScraperService {
 
                 List<Map<String, Object>> allBrandsData = new ArrayList<>();
 
+                Path outputPath = Paths.get("scraper-output", "ultimatespecs-first-elements.json");
+                Files.createDirectories(outputPath.getParent());
+
                 for (Element brand : brands) {
-                        Map<String, Object> brandData = new HashMap<>();
 
-                        String brandName = brand.select(".home_brand").text();
-                        Element img = brand.selectFirst(".home_brand_logo img");
+                        try {
+                                Map<String, Object> brandData = new HashMap<>();
 
-                        brandData.put("brandName", brandName);
+                                String brandName = brand.select(".home_brand").text();
+                                Element img = brand.selectFirst(".home_brand_logo img");
 
-                        String spriteUrl = "";
-                        int x = 0;
-                        int y = 0;
+                                Files.writeString(outputPath, toJson(allBrandsData));
+                                log.info("Preview JSON generated at {}", outputPath.toAbsolutePath());
 
-                        if (img != null) {
+                                brandData.put("brandName", brandName);
 
-                                String style = img.attr("style");
+                                String spriteUrl = "";
+                                int x = 0;
+                                int y = 0;
 
-                                int urlStart = style.indexOf("url('");
-                                int urlEnd = style.indexOf("')", urlStart);
+                                if (img != null) {
+                                        String style = img.attr("style");
 
-                                if (urlStart != -1 && urlEnd != -1) {
-                                        spriteUrl = style.substring(urlStart + 5, urlEnd);
-                                }
+                                        int urlStart = style.indexOf("url('");
+                                        int urlEnd = style.indexOf("')", urlStart);
 
-                                String[] parts = style.split(" ");
+                                        if (urlStart != -1 && urlEnd != -1) {
+                                                spriteUrl = style.substring(urlStart + 5, urlEnd);
+                                        }
 
-                                for (String p : parts) {
-                                        if (p.endsWith("px")) {
-                                                int val = Math.abs(
-                                                                Integer.parseInt(p.replace("px", "").replace(";", "")));
+                                        String[] parts = style.split(" ");
 
-                                                if (x == 0)
-                                                        x = val;
-                                                else
-                                                        y = val;
+                                        for (String p : parts) {
+                                                if (p.endsWith("px")) {
+                                                        int val = Math.abs(
+                                                                        Integer.parseInt(p.replace("px", "")
+                                                                                        .replace(";", "")));
+
+                                                        if (x == 0) {
+                                                                x = val;
+                                                        } else {
+                                                                y = val;
+                                                        }
+                                                }
                                         }
                                 }
+
+                                if (!spriteUrl.isEmpty()) {
+                                        BufferedImage sprite = ImageIO.read(
+                                                        URI.create("https://www.ultimatespecs.com" + spriteUrl)
+                                                                        .toURL());
+
+                                        BufferedImage logo = sprite.getSubimage(x, y, 60, 60);
+
+                                        File out = new File(outputDir,
+                                                        brandName.replaceAll("[^a-zA-Z0-9]", "_") + ".png");
+
+                                        ImageIO.write(logo, "png", out);
+                                }
+
+                                System.out.println("Brand: " + brandName);
+
+                                List<Map<String, Object>> modelsData = scrapeModelsForBrand(brand);
+                                brandData.put("models", modelsData);
+                                allBrandsData.add(brandData);
+
+                                log.info("\nModelsData:\n{}", formatForDebug(modelsData));
+
+                                // Debug mode: only first brand
+
+                        } catch (Exception e) {
+
                         }
 
-                        if (!spriteUrl.isEmpty()) {
-
-                                BufferedImage sprite = ImageIO.read(
-                                                new URL("https://www.ultimatespecs.com" + spriteUrl));
-
-                                BufferedImage logo = sprite.getSubimage(x, y, 60, 60);
-
-                                File out = new File(outputDir,
-                                                brandName.replaceAll("[^a-zA-Z0-9]", "_") + ".png");
-
-                                ImageIO.write(logo, "png", out);
-                        }
-
-                        System.out.println("Brand: " + brandName);
-
-                        // ===========================
-                        // NEW: scrape models per brand
-                        // ===========================
-                        List<Map<String, Object>> modelsData = scrapeModelsForBrand(brand);
-                        brandData.put("models", modelsData);
-                        allBrandsData.add(brandData);
                 }
-
-                // Save all collected data to JSON
-                ObjectMapper mapper = new ObjectMapper().enable(SerializationFeature.INDENT_OUTPUT);
-                mapper.writeValue(new File("scraped_data.json"), allBrandsData);
-                log.info("Data saved to scraped_data.json");
         }
 
         /**
@@ -125,17 +135,9 @@ public class UltimateSpecsVehicleScraperService {
          * Extracts models from each brand page
          */
         private List<Map<String, Object>> scrapeModelsForBrand(Element brandElement) throws IOException {
-
                 List<Map<String, Object>> modelsData = new ArrayList<>();
-                Element brandLink = brandElement.parent().selectFirst("a[href]");
-                if (brandLink == null) {
-                        System.out.println("NO LINK");
-                        return modelsData;
-                }
-
-                String brandUrl = brandLink.absUrl("href");
-
-                if (brandUrl == null || brandUrl.isEmpty()) {
+                String brandUrl = brandElement.absUrl("href");
+                if (brandUrl == null || brandUrl.isBlank()) {
                         System.out.println("NO BRAND URL");
                         return modelsData;
                 }
@@ -143,49 +145,92 @@ public class UltimateSpecsVehicleScraperService {
                 log.info("Navigating to brand page: {}", brandUrl);
 
                 Document doc = Jsoup.connect(brandUrl)
-                                .userAgent("Mozilla/5.0")
+                                .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36")
+                                .referrer("https://www.ultimatespecs.com/es")
                                 .timeout(10000)
                                 .get();
+                // Implementar forma de acceder a href="/es/car-specs/Abarth" para expandir la
+                // lista de modelos, ya que actualmente solo se muestran 5 modelos por marca y
+                // hay marcas con más modelos (ejemplo: Abarth)
+                Elements modelBlocks = doc.select("div.home_models_line");
 
-                Elements models = doc.select(".home_models_line a[href]");
+                // Debug: print model blocks count and total versions count
+                int versionsCount = 0;
+                for (Element block : modelBlocks) {
+                        versionsCount += block.childrenSize();
+                }
+
+                System.out.println("Found " + versionsCount + " car model versions for brand " + brandUrl);
 
                 File outputDir = new File("models");
                 outputDir.mkdirs();
-                for (Element a : models) {
-                        Map<String, Object> modelData = new HashMap<>();
 
-                        Element img = a.selectFirst("img");
-                        Element title = a.selectFirst("h2");
-
-                        Element link = a.selectFirst("a[href]");
-                        if (link == null) {
-                                link = a; // The element itself is likely the link
+                for (Element modelBlock : modelBlocks) {
+                        Element modelLink = modelBlock.children().selectFirst("a[href]");
+                        if (modelLink == null) {
+                                modelLink = modelBlock.selectFirst("a[href]");
                         }
 
-                        String modelUrl = link.absUrl("href");
+                        if (modelLink == null) {
+                                continue;
+                        }
+
+                        String modelUrl = modelLink.absUrl("href");
+                        if (modelUrl == null || modelUrl.isBlank()) {
+                                continue;
+                        }
+
+                        Map<String, Object> modelData = new HashMap<>();
                         modelData.put("url", modelUrl);
 
+                        Element img = modelBlock.selectFirst("img");
+                        Element title = modelBlock.selectFirst("h2");
+
                         Document modelDoc = Jsoup.connect(modelUrl)
-                                        .userAgent("Mozilla/5.0")
+                                        .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36")
+                                        .referrer(brandUrl)
                                         .timeout(10000)
                                         .get();
 
                         List<Map<String, Object>> versionsList = new ArrayList<>();
 
-                        // A div with id versions exists only when this page is final
-                        Element versionsDiv = modelDoc.selectFirst("#versions");
+                        Elements versionBlocks = modelDoc.select("div.home_models_line");
+                        if (!versionBlocks.isEmpty()) {
+                                for (Element versionBlock : versionBlocks) {
+                                        Element versionLink = versionBlock.children().selectFirst("a[href]");
+                                        if (versionLink == null) {
+                                                versionLink = versionBlock.selectFirst("a[href]");
+                                        }
 
-                        if (versionsDiv == null) {
-                                System.out.println("TWO OR MORE VERSIONS, NOT FINAL PAGE");
-                                Element modelVersions = modelDoc.select("a[href]");
+                                        if (versionLink == null) {
+                                                continue;
+                                        }
 
-                                for (Element version : modelVersions) {
-                                        String versionUrl = version.absUrl("href");
+                                        String versionUrl = versionLink.absUrl("href");
+                                        if (versionUrl == null || versionUrl.isBlank()) {
+                                                continue;
+                                        }
+
+                                        System.out.println("Found version href: " + versionUrl);
                                         versionsList.add(scrapeVersion(versionUrl));
                                 }
                         } else {
-                                System.out.println("FINAL PAGE, SCRAPING VERSION");
-                                versionsList.add(scrapeVersion(modelUrl));
+                                Elements versionLinks = modelDoc.select(
+                                                ".versions_div a[href], .table_versions a[href], #versions a[href]");
+                                if (!versionLinks.isEmpty()) {
+                                        for (Element versionLink : versionLinks) {
+                                                String versionUrl = versionLink.absUrl("href");
+                                                if (versionUrl == null || versionUrl.isBlank()) {
+                                                        continue;
+                                                }
+
+                                                System.out.println("Found version href: " + versionUrl);
+                                                versionsList.add(scrapeVersion(versionUrl));
+                                        }
+                                } else {
+                                        System.out.println("NO VERSION BLOCKS FOUND, SCRAPING MODEL PAGE AS FALLBACK");
+                                        versionsList.add(scrapeVersion(modelUrl));
+                                }
                         }
 
                         modelData.put("versions", versionsList);
@@ -197,7 +242,7 @@ public class UltimateSpecsVehicleScraperService {
                         if (img != null) {
                                 imageUrl = img.attr("abs:src");
                                 if (imageUrl.isEmpty()) {
-                                        imageUrl = "https:" + img.attr("src"); // fallback for // URLs
+                                        imageUrl = "https:" + img.attr("src");
                                 }
                         }
                         modelData.put("imageUrl", imageUrl);
@@ -209,6 +254,8 @@ public class UltimateSpecsVehicleScraperService {
                         }
                         modelsData.add(modelData);
                 }
+
+                System.out.println("SCRAPED MODELS FOR BRAND EXECUTION FINISHED");
                 return modelsData;
         }
 
@@ -223,57 +270,122 @@ public class UltimateSpecsVehicleScraperService {
 
                         Element img = doc.selectFirst(".left_column_top_model_image_div");
 
-                        // I'm searching a div with class resumo_ficha
                         Element resumo_ficha = doc.selectFirst(".resumo_ficha");
 
                         if (resumo_ficha != null) {
-                                // I need the div inside the div with class col-12 with a h2 with class
-                                // post_title_12
-                                Element specContainer = resumo_ficha.selectFirst(".margin-left:10px;margin-top:5px");
+                                Element col12 = resumo_ficha.selectFirst(".col-12");
+                                Element specContainer = null;
+                                if (col12 != null) {
+                                        specContainer = col12.selectFirst(
+                                                        "div[style*=margin-left:10px][style*=margin-top:5px]");
+                                        if (specContainer == null) {
+                                                specContainer = col12.selectFirst(
+                                                                "div[style*=margin-left][style*=margin-top]");
+                                        }
+                                        if (specContainer == null) {
+                                                specContainer = col12.selectFirst("div");
+                                        }
+                                }
 
                                 if (specContainer != null) {
-                                        // Specifications should have a div with i class fa fa-dot-circle with bold text
-                                        // with meaningful data
-                                        Elements specsElements = specContainer.select(".fa-dot-circle");
-
-                                        // Each specificatio nhas a bold text with the title of the specification and a
-                                        // span with the actual value, which can have sup tags or similar
                                         Map<String, String> specsMap = new HashMap<>();
-                                        for (Element specification : specsElements) {
-                                                Element title = specification.selectFirst("b");
-                                                Element value = specification.selectFirst("span");
-                                                if (title != null && value != null) {
-                                                        System.out.println(title.text() + " -> " + value.text());
-                                                        specsMap.put(title.text(), value.text());
+                                        Elements titleElements = specContainer.select("b");
+
+                                        for (Element titleElement : titleElements) {
+                                                String title = titleElement.text().trim();
+                                                if (title.isEmpty()) {
+                                                        continue;
+                                                }
+
+                                                StringBuilder valueBuilder = new StringBuilder();
+                                                for (Node sibling = titleElement
+                                                                .nextSibling(); sibling != null; sibling = sibling
+                                                                                .nextSibling()) {
+                                                        if (sibling instanceof Element siblingElement) {
+                                                                if ("br".equalsIgnoreCase(siblingElement.tagName())) {
+                                                                        break;
+                                                                }
+
+                                                                if ("b".equalsIgnoreCase(siblingElement.tagName())) {
+                                                                        break;
+                                                                }
+
+                                                                if ("i".equalsIgnoreCase(siblingElement.tagName())
+                                                                                && (siblingElement.hasClass(
+                                                                                                "fa-dot-circle")
+                                                                                                || siblingElement
+                                                                                                                .hasClass("fa-dot-circle-o"))) {
+                                                                        break;
+                                                                }
+
+                                                                String text = siblingElement.text().trim();
+                                                                if (!text.isEmpty()) {
+                                                                        if (!valueBuilder.isEmpty()) {
+                                                                                valueBuilder.append(' ');
+                                                                        }
+                                                                        valueBuilder.append(text);
+                                                                }
+                                                                continue;
+                                                        }
+
+                                                        if (sibling instanceof TextNode textNode) {
+                                                                String text = textNode.text().trim();
+                                                                if (!text.isEmpty()) {
+                                                                        if (!valueBuilder.isEmpty()) {
+                                                                                valueBuilder.append(' ');
+                                                                        }
+                                                                        valueBuilder.append(text);
+                                                                }
+                                                        }
+                                                }
+
+                                                String value = valueBuilder.toString().replaceAll("\\s+", " ").trim();
+                                                if (!value.isEmpty()) {
+                                                        System.out.println(title + " -> " + value);
+                                                        specsMap.put(title, value);
                                                 }
                                         }
+
                                         versionData.put("specifications", specsMap);
                                 }
                         }
 
-                        // Search a div with class table_versions and extact all the table
-                        // information
                         Element table_versions = doc.selectFirst(".table_versions");
 
                         if (table_versions != null) {
-                                // The table has a thead with th elements with the headers
-                                Element thead = table_versions.selectFirst("thead");
-                                Elements headers = thead != null ? thead.select("th") : new Elements();
-
-                                // The table has a tbody with tr elements with the data
-                                Element tbody = table_versions.selectFirst("tbody");
-                                Elements rows = tbody != null ? tbody.select("tr") : new Elements();
-
+                                Elements rows = table_versions.select("tr");
                                 List<Map<String, String>> tableData = new ArrayList<>();
-                                for (Element row : rows) {
-                                        Elements cells = row.select("td");
-                                        Map<String, String> rowData = new HashMap<>();
-                                        for (int i = 0; i < headers.size() && i < cells.size(); i++) {
-                                                System.out.println(headers.get(i).text() + " -> " + cells.get(i).text());
-                                                rowData.put(headers.get(i).text(), cells.get(i).text());
+
+                                if (!rows.isEmpty()) {
+                                        Elements headerCells = rows.get(0).select("th, td");
+                                        List<String> headers = new ArrayList<>();
+                                        for (Element headerCell : headerCells) {
+                                                String headerText = headerCell.text().trim();
+                                                headers.add(headerText.isEmpty() ? "column" + (headers.size() + 1)
+                                                                : headerText);
                                         }
-                                        tableData.add(rowData);
+
+                                        for (int rowIndex = 1; rowIndex < rows.size(); rowIndex++) {
+                                                Elements cells = rows.get(rowIndex).select("td, th");
+                                                if (cells.isEmpty()) {
+                                                        continue;
+                                                }
+
+                                                Map<String, String> rowData = new HashMap<>();
+                                                for (int i = 0; i < cells.size(); i++) {
+                                                        String key = i < headers.size() ? headers.get(i)
+                                                                        : "column" + (i + 1);
+                                                        String value = cells.get(i).text().trim();
+                                                        System.out.println(key + " -> " + value);
+                                                        rowData.put(key, value);
+                                                }
+
+                                                if (!rowData.isEmpty()) {
+                                                        tableData.add(rowData);
+                                                }
+                                        }
                                 }
+
                                 versionData.put("table_versions", tableData);
                         }
 
@@ -283,13 +395,10 @@ public class UltimateSpecsVehicleScraperService {
                 return versionData;
         }
 
-        /**
-         * Downloads model image
-         */
         private void downloadModelImage(String imageUrl, String brandUrl, String modelName) {
-
                 try {
-                        BufferedImage image = ImageIO.read(new URL(imageUrl));
+                        BufferedImage image = ImageIO.read(
+                                        URI.create(imageUrl.startsWith("//") ? "https:" + imageUrl : imageUrl).toURL());
 
                         File dir = new File("models/" + sanitize(brandUrl));
                         dir.mkdirs();
@@ -303,10 +412,138 @@ public class UltimateSpecsVehicleScraperService {
                 }
         }
 
-        /**
-         * Safe filesystem naming
-         */
         private String sanitize(String input) {
                 return input.replaceAll("[^a-zA-Z0-9]", "_");
+        }
+
+        private String formatForDebug(Object value) {
+                StringBuilder builder = new StringBuilder();
+                appendFormatted(builder, value, 0);
+                return builder.toString();
+        }
+
+        private void appendFormatted(StringBuilder builder, Object value, int depth) {
+                if (value == null) {
+                        builder.append("<null>");
+                        return;
+                }
+
+                if (value instanceof Map<?, ?> mapValue) {
+                        builder.append("{\n");
+                        int index = 0;
+                        for (Map.Entry<?, ?> entry : mapValue.entrySet()) {
+                                builder.append(indent(depth + 1))
+                                                .append(String.valueOf(entry.getKey()))
+                                                .append(": ");
+                                appendFormatted(builder, entry.getValue(), depth + 1);
+                                if (index < mapValue.size() - 1) {
+                                        builder.append(',');
+                                }
+                                builder.append('\n');
+                                index++;
+                        }
+                        builder.append(indent(depth)).append('}');
+                        return;
+                }
+
+                if (value instanceof List<?> listValue) {
+                        builder.append("[\n");
+                        for (int i = 0; i < listValue.size(); i++) {
+                                builder.append(indent(depth + 1));
+                                appendFormatted(builder, listValue.get(i), depth + 1);
+                                if (i < listValue.size() - 1) {
+                                        builder.append(',');
+                                }
+                                builder.append('\n');
+                        }
+                        builder.append(indent(depth)).append(']');
+                        return;
+                }
+
+                if (value instanceof String stringValue) {
+                        builder.append('"').append(stringValue).append('"');
+                        return;
+                }
+
+                builder.append(String.valueOf(value));
+        }
+
+        private String indent(int depth) {
+                return "  ".repeat(depth);
+        }
+
+        private String toJson(Object value) {
+                StringBuilder builder = new StringBuilder();
+                appendJson(builder, value, 0);
+                return builder.toString();
+        }
+
+        private void appendJson(StringBuilder builder, Object value, int depth) {
+                if (value == null) {
+                        builder.append("null");
+                        return;
+                }
+
+                if (value instanceof Map<?, ?> mapValue) {
+                        builder.append("{");
+                        if (!mapValue.isEmpty()) {
+                                builder.append('\n');
+                                int index = 0;
+                                for (Map.Entry<?, ?> entry : mapValue.entrySet()) {
+                                        builder.append(indent(depth + 1))
+                                                        .append('"').append(escapeJson(String.valueOf(entry.getKey())))
+                                                        .append('"')
+                                                        .append(": ");
+                                        appendJson(builder, entry.getValue(), depth + 1);
+                                        if (index < mapValue.size() - 1) {
+                                                builder.append(',');
+                                        }
+                                        builder.append('\n');
+                                        index++;
+                                }
+                                builder.append(indent(depth));
+                        }
+                        builder.append('}');
+                        return;
+                }
+
+                if (value instanceof List<?> listValue) {
+                        builder.append("[");
+                        if (!listValue.isEmpty()) {
+                                builder.append('\n');
+                                for (int i = 0; i < listValue.size(); i++) {
+                                        builder.append(indent(depth + 1));
+                                        appendJson(builder, listValue.get(i), depth + 1);
+                                        if (i < listValue.size() - 1) {
+                                                builder.append(',');
+                                        }
+                                        builder.append('\n');
+                                }
+                                builder.append(indent(depth));
+                        }
+                        builder.append(']');
+                        return;
+                }
+
+                if (value instanceof String stringValue) {
+                        builder.append('"').append(escapeJson(stringValue)).append('"');
+                        return;
+                }
+
+                if (value instanceof Number || value instanceof Boolean) {
+                        builder.append(value);
+                        return;
+                }
+
+                builder.append('"').append(escapeJson(String.valueOf(value))).append('"');
+        }
+
+        private String escapeJson(String input) {
+                return input
+                                .replace("\\", "\\\\")
+                                .replace("\"", "\\\"")
+                                .replace("\n", "\\n")
+                                .replace("\r", "\\r")
+                                .replace("\t", "\\t");
         }
 }
